# lab_work_1

./: CMakeLists.txt  Clothes_deck.h  Description  Makefile  README.md  Testing plan  acid.cpp  ai.cpp  ai.h  ai_learning.cpp  armor.cpp  boots.cpp  choose_cart_bottom.h  common.h  couse_troubles_bottom.h  doors_deck.cpp  doors_deck.h  field.cpp  game2.0.cpp  game2.cpp  gloves.cpp  gloves.h  level.cpp  level.h  logic.cpp  logic.h  main.cc  main.cpp  monsters.cpp  monsters_deck.h  poison_apple.cpp  poison_apple.h  protection.cpp  system requirements  treasure.cpp  treasure.h  your_carts(2).h
.github/workflows/: main.yml
Archetecture/: classes
cpp_files/: acid.cpp  ai.cpp  ai_learning.cpp  armor.cpp  boots.cpp  cloth_deck.cpp  doors_deck.cpp  field.cpp  gloves.cpp  level.cpp  logic.cpp  main.cpp  monsters.cpp  poison_apple.cpp  protection.cpp  race_class.cpp  treasure.cpp  your_carts.cpp
headers/: acid.h  ai.h  ai_learning.h  armor.h  boots.h  choose_cart_bottom.h  cloth_deck.h  common.h  couse_troubles_bottom.h  doors_deck.h  field.h  gloves.h  level.h  logic.h  monsters.h  monsters_deck.h  poison_apple.h  protection.h  race_class.h  treasure.h  your_carts.h
tests/: Gtests  Testing_by_plaing  all_tests.cpp  battle.cpp  deck_tests.cpp  testing report  testing_plan
testы/: battle.cpp
